<resources>
    <string name="app_title">Banana Rental</string>
    <string name="app_name">Banana Rental</string>
    <string name="title_email_password_sisu">"Email &amp; Password"</string>
    <string name="title_email_oob_sisu">"Email &amp; OTP"</string>
    <string name="title_email_attribute_oob_sisu">"Custom Attributes"</string>
    <string name="title_email_oob_sspr">"Password Reset"</string>
    <string name="title_more">"More"</string>
    <string name="title_web_fallback">"Web Fallback"</string>
    <string name="title_idp_web_flow">"Identity Provider Web"</string>
    <string name="title_access_web_api">"Access Protected Web APIs"</string>
    <string name="title_mfa">"Multi-factor authentication"</string>
    <string name="sign_in">"Sign In"</string>
    <string name="sign_up">"Sign Up"</string>
    <string name="sign_out">"Sign Out"</string>
    <string name="browser_sign_out_button">"Sign Out of Browser Session"</string>
    <string name="browser_sign_out_no_authority_message">"Couldn\'t determine the tenant authority to build the logout URL from - check auth_config_native_auth.json is valid, or that AuthClient.initialize() was called with a valid authorityUrl."</string>
    <string name="browser_sign_out_no_browser_message">"No app on this device can open a browser link. Sign Out of Browser Session needs a real browser (e.g. Chrome) installed to clear the SSO session - some bare emulator images don\'t ship with one."</string>
    <string name="browser_sign_out_note">"\'Sign Out\' above only clears this app\'s cache. Use this to also clear the SSO session Entra keeps in the browser, so the next browser-based sign-in (Profile tab, or the MFA step-up above) asks fresh instead of reusing it."</string>
    <string name="forget_password">"Forget Password"</string>
    <string name="submit_password">"Submit"</string>
    <string name="create">"Create New User"</string>
    <string name="verify_email">"Send"</string>
    <string name="verify_code">"Next"</string>
    <string name="register_auth_method">"Continue"</string>
    <string name="resend_code_text">"Resend Code"</string>
    <string name="resend_challenge_text">"Resend Challenge"</string>
    <string name="api_get">"API - Perform GET"</string>
    <string name="result">Result</string>
    <string name="hint_text_value">"Please fill in the required information:"</string>
    <string name="hint_password_text_value">"Please submit a new password."</string>
    <string name="oob_hint_text_value">"Please enter the code that you received in your email."</string>
    <string name="attributes_hint_text_value">"Additional attributes are required, please enter them below."</string>
    <string name="mfa_challenge_hint_text_value">"Please enter the challenge that you received in your challengeChannel loginHint."</string>
    <string name="strong_auth_challenge_hint_text_value">"Please enter the verification code that was send to your %1$s %2$s. This step is needed to register a new strong authentication method."</string>
    <string name="strong_auth_email_hint_text_value">"For Multi-factor authentication, you can enter a separate email address (optional). If you don't provide one, we will use your primary email address."</string>
    <string name="strong_auth_sms_hint_text_value">"For Multi-factor authentication using SMS please enter your phone number. The format needs to be \"+&lt;country code&gt; &lt;number&gt;\", for example \"+1 000111222\""</string>
    <string name="pick_auth_method_registration_text_value">"Please select a method you want to register for multi-factor authentication."</string>
    <string name="select_idp">"Please select an Identity Provider (domain_hint)"</string>
    <string name="sign_in_successful_message">"Sign in successful"</string>
    <string name="sign_up_successful_message">"Sign up successful. Signing in."</string>
    <string name="sign_in_switch_to_otp_message">"Account requires code for sign in"</string>
    <string name="sign_out_successful_message">"Sign out successful"</string>
    <string name="password_reset_success_message">"Password change successful. Signing in."</string>
    <string name="resend_code_message">"New code sent"</string>
    <string name="resend_challenge_message">"New challenge sent"</string>
    <string name="yes_message">"Yes"</string>
    <string name="cancel_message">"Cancel"</string>
    <string name="mfa_required_notice">"Multi-factor authentication is required. Do you want to proceed?"</string>
    <string name="strong_auth_method_title">"Strong authentication method"</string>
    <string name="strong_auth_method_message">"Registration of strong authentication method is required. \nDo you want to proceed?"</string>
    <string name="msal_exception_title">"MSAL Exception"</string>
    <string name="unexpected_sdk_result_title">"Unexpected Result"</string>
    <string name="unexpected_sdk_error_title">"Unexpected Error"</string>
    <string name="network_request_exception_titile">"Network Request Exception"</string>
    <string name="invalid_web_url_title">"Invalid WEB_API_BASE_URL"</string>
    <string name="unknown_error_message">"Unknown error"</string>
    <string name="invalid_web_url_message">"Please set the WEB_API_BASE_URL constant to the URL of your web API."</string>
    <string name="attribute_email">"Email"<font color='@android:color/red'>*</font></string>
    <string name="attribute_email_or_username">"Email or Username"<font color='@android:color/red'>*</font></string>
    <string name="attribute_phone_number">"Phone number"<font color='@android:color/red'>*</font></string>
    <string name="attribute_password">"Password"<font color='@android:color/red'>*</font></string>
    <string name="attribute_country">"Country"</string>
    <string name="attribute_city">"City"</string>
    <string name="attribute_given">"Given name"</string>
    <string name="attribute_surname">"Surname"</string>
    <string name="attribute_otp">"Code"</string>
    <string name="attribute_username">"Username"</string>
    <string name="submit_attributes">"Submit"</string>
    <string name="attribute_mfa_challenge">"Challenge"</string>
    <string name="result_account_text">"Account username: "</string>
    <string name="result_access_token_text">"Access token: "</string>
    <string name="result_access_token_of_scopes_text">"Access token of scopes:\n"</string>
    <string name="result_id_token_text">"ID token: "</string>
    <string name="result_text">"Result: "</string>
    <string name="response_api">"API response is: "</string>
    <string name="chevron_description">"Chevron right"</string>
    <string name="title_home">"Home"</string>
    <string name="title_profile">"Profile"</string>
    <string name="auth_flow_showcase_note">"Demo note: \'Sign In / Join\' above uses native in-app auth; the Profile tab below uses browser-based auth instead (and leaves an SSO session that step-up MFA can reuse)."</string>
    <string name="banana_logo_description">"Banana Rental"</string>
    <string name="nav_sign_in_join">"Sign In / Join Banana Club"</string>
    <string name="hero_eyebrow">"Banana Rental"</string>
    <string name="hero_title">"Find your perfect ride, anywhere."</string>
    <string name="hero_subtitle">"Fast, affordable car rentals in 500+ cities. Book in minutes, drive in style."</string>
    <string name="search_location_label">"Pick-up &amp; return location"</string>
    <string name="search_location_default">"Los Angeles, CA (LAX)"</string>
    <string name="search_pickup_date_label">"Pick-up date"</string>
    <string name="search_return_date_label">"Return date"</string>
    <string name="search_cars_button">"Search Cars"</string>
    <string name="reservation_title">"Your Reservation"</string>
    <string name="reservation_vehicle_name">"Toyota RAV4 or similar"</string>
    <string name="reservation_vehicle_class">"Midsize SUV"</string>
    <string name="reservation_extras">"GPS Navigation, Additional Driver"</string>
    <string name="reservation_pickup_label">"Pick-up"</string>
    <string name="reservation_return_label">"Return"</string>
    <string name="reservation_extras_label">"Extras"</string>
    <string name="reservation_total_format">"%1$d day(s) × $%2$d"</string>
    <string name="reservation_total_estimated_format">"$%1$d estimated"</string>
    <string name="driver_details_title">"Driver Details"</string>
    <string name="driver_details_subhead">"This demo doesn\'t have real vehicle selection or add-ons - imagine you already picked those."</string>
    <string name="driver_details_prefill_note">"We\'ve filled in your name and email from your Banana Club account - they\'re locked since they\'re already verified."</string>
    <string name="driver_first_name_label">"First name"</string>
    <string name="driver_last_name_label">"Last name"</string>
    <string name="driver_email_label">"Email"</string>
    <string name="driver_phone_label">"Phone (Optional)"</string>
    <string name="driver_dob_label">"Date of birth"</string>
    <string name="reservation_step_location_dates">"Location &amp; Dates"</string>
    <string name="reservation_step_vehicle">"Vehicle"</string>
    <string name="reservation_step_extras">"Extras"</string>
    <string name="reservation_step_driver_details">"Driver Details"</string>
    <string name="loyalty_optin_question">"Want to earn points on this trip?"</string>
    <string name="loyalty_optin_subtext">"Join Banana Club free - we\'ll save these details and get you signed up in seconds. You\'ll only need to set a password."</string>
    <string name="continue_as_guest_button">"Continue as Guest"</string>
    <string name="yes_sign_me_up_button">"Yes, Sign Me Up"</string>
    <string name="login_button">"Login"</string>
    <string name="loyalty_optin_login_note">"Already a member? Login instead - no need to fill out the form above."</string>
    <string name="reserve_now_button">"Reserve Now"</string>
    <string name="reservation_confirmed_title">"Your car is reserved!"</string>
    <string name="reservation_confirmed_thanks_format">"Thanks, %1$s - a confirmation would normally be sent to %2$s."</string>
    <string name="reservation_confirmed_demo_note">"Demo note: this app only wires up sign-in/sign-up - there\'s no real booking backend behind this confirmation."</string>
    <string name="continue_to_my_account_button">"Continue to My Account"</string>
    <string name="profile_name_label">"Name:"</string>
    <string name="profile_phone_label">"Phone:"</string>
    <string name="profile_dob_label">"Date of Birth:"</string>
    <string name="drivers_license_label">"Driver\'s License:"</string>
    <string name="drivers_license_masked">"••••••••••"</string>
    <string name="drivers_license_demo_value">"DL8773233198"</string>
    <string name="access_sensitive_feature_button">"Access Sensitive Feature (Require MFA)"</string>
    <string name="login_sign_in_button">"Sign In"</string>
    <string name="login_join_button">"Join Banana Club"</string>
    <string name="join_profile_note">"You\'ll set your email and create a password next."</string>
    <string name="profile_first_name_label">"First Name *"</string>
    <string name="profile_last_name_label">"Last Name *"</string>
    <string name="profile_preferred_name_label">"Preferred Name (Optional)"</string>
    <string name="join_profile_dob_label">"Date of birth *"</string>
    <string name="join_profile_phone_label">"Phone Number *"</string>
    <string name="profile_phone_consent_note">"No country code? We\'ll default to +1 (US). By providing your number, you agree to receive text messages. Message and data rates may apply."</string>
    <string name="profile_terms_label">"I\'ve read terms and conditions *"</string>
    <string name="profile_continue_button">"Continue to Create Account"</string>
    <string name="profile_cancel_button">"Cancel"</string>
</resources>