<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

    <Button
        android:id="@+id/web_fallback"
        android:layout_marginTop="@dimen/dimens_15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_web_fallback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/OptionItemStyle" />

	<View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimens_1dp"
        android:layout_marginLeft="@dimen/dimens_10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/web_fallback" />

	<Button
		android:id="@+id/idp_web_flow"
		android:layout_marginTop="@dimen/dimens_15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_idp_web_flow"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider1"
		style="@style/OptionItemStyle" />

	<View
		android:id="@+id/divider2"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimens_1dp"
		android:layout_marginLeft="@dimen/dimens_10dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/idp_web_flow" />

	<Button
		android:id="@+id/use_access_token"
		android:layout_marginTop="@dimen/dimens_15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_access_web_api"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider2"
		style="@style/OptionItemStyle" />

	<View
		android:id="@+id/divider3"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimens_1dp"
		android:layout_marginLeft="@dimen/dimens_10dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/use_access_token" />

	<Button
		android:id="@+id/email_MFA"
		android:layout_marginTop="@dimen/dimens_15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_mfa"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider3"
		style="@style/OptionItemStyle" />

	<View
		android:id="@+id/divider4"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimens_1dp"
		android:layout_marginLeft="@dimen/dimens_10dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_MFA" />

	<!-- The following scenarios moved here from the bottom nav once Home/LoginFragment
	     became the app's primary branded sign-in entry point. -->
	<Button
		android:id="@+id/email_oob_sisu"
		android:layout_marginTop="@dimen/dimens_15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_email_oob_sisu"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider4"
		style="@style/OptionItemStyle" />

	<View
		android:id="@+id/divider5"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimens_1dp"
		android:layout_marginLeft="@dimen/dimens_10dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_oob_sisu" />

	<Button
		android:id="@+id/email_password_sisu"
		android:layout_marginTop="@dimen/dimens_15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_email_password_sisu"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider5"
		style="@style/OptionItemStyle" />

	<View
		android:id="@+id/divider6"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimens_1dp"
		android:layout_marginLeft="@dimen/dimens_10dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_password_sisu" />

	<Button
		android:id="@+id/email_attribute_oob_sisu"
		android:layout_marginTop="@dimen/dimens_15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_email_attribute_oob_sisu"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider6"
		style="@style/OptionItemStyle" />

	<View
		android:id="@+id/divider7"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimens_1dp"
		android:layout_marginLeft="@dimen/dimens_10dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_attribute_oob_sisu" />

	<Button
		android:id="@+id/email_oob_sspr"
		android:layout_marginTop="@dimen/dimens_15dp"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/title_email_oob_sspr"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/divider7"
		style="@style/OptionItemStyle" />

	<View
		android:id="@+id/divider8"
		android:layout_width="match_parent"
		android:layout_height="@dimen/dimens_1dp"
		android:layout_marginLeft="@dimen/dimens_10dp"
		android:background="?android:attr/listDivider"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/email_oob_sspr" />
</androidx.constraintlayout.widget.ConstraintLayout>
